--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Click==7.0
+e==1.4.5
 Flask==1.1.1
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
-Werkzeug==0.16.1
+pkg-resources==0.0.0
+Werkzeug==1.0.0
